package Biblioteca;

public class DashboardGeneraleController {

    private void initialize() {
    }

    private void apriSezUtente() {
    }

    private void apriSezLibro() {
    }

    private void apriSezPrestiti() {
    }
}
