@startuml DiagrammaDelleClassi

title Biblioteca Universitaria - Diagramma delle Classi


class Utente {
    - nome : StringProperty {readOnly}
    - cognome : StringProperty {readOnly}
    - matricola : StringProperty {readOnly}
    - email : StringProperty {readOnly}
    - prestitiAttivi : ObservableList<String> {readOnly}
    + Utente(nome : String, cognome : String, matricola : String, email : String)
    + getNome() : String
    + setNome(nome : String) : void
    + getCognome() : String
    + setCognome(cognome : String) : void
    + getMatricola() : String
    + setMatricola(matricola : String) : void
    + getEmail() : String
    + setEmail(email : String) : void
    + getPrestitiAttivi() : ObservableList<String>
    + nomeProperty() : StringProperty
    + cognomeProperty() : StringProperty
    + matricolaProperty() : StringProperty
    + emailProperty() : StringProperty
    + equals(obj : Object) : boolean
    + toString() : String
    + toStringPrestito() : String
}

class Libro {
    - titolo : StringProperty {readOnly}
    - autori : StringProperty {readOnly}
    - anno : IntegerProperty {readOnly}
    - isbn : StringProperty {readOnly}
    - copieTotali : IntegerProperty {readOnly}
    - copieDisponibili : IntegerProperty {readOnly}
    + Libro(nome : String, autori : String, anno : int, isbn : String, copieTotali : int)
    + getTitolo() : String
    + setTitolo(titolo : String) : void
    + getAutori() : String
    + setAutori(autori : String) : void
    + getAnno() : int
    + setAnno(anno : int) : void
    + getIsbn() : String
    + setIsbn(isbn : String) : void
    + getCopieTotali() : int
    + setCopieTotali(copieTotali : int) : void
    + getCopieDisponibili() : int
    + setCopieDisponibili(copieDisponibili : int) : void
    + titoloProperty() : StringProperty
    + autoriProperty() : StringProperty
    + annoProperty() : IntegerProperty
    + isbnProperty() : StringProperty
    + copieTotaliProperty() : IntegerProperty
    + copieDisponibiliProperty() : IntegerProperty
    + equals(obj : Object) : boolean
    + toString() : String
    + toStringPrestito() : String
}

class Prestito {
    - utente : StringProperty {readOnly}
    - libro : StringProperty {readOnly}
    - dataRestituzione : LocalDate {readOnly}
    + Prestito(utente : String, libro : String, dataRestituzione : LocalDate)
    + getUtente() : String
    + getLibro() : String
    + getDataRestituzione() : LocalDate
    + utenteProperty() : StringProperty
    + libroProperty() : StringProperty
    + toString() : String
    + toStringUtente() : String
}

class Biblioteca {
    - listaUtenti : ObservableList<Utente> {readOnly}
    - listaLibri : ObservableList<Libro> {readOnly}
    - listaPrestiti : ObservableList<Prestito> {readOnly}
    - instance : Biblioteca
    - Biblioteca()
    + {static} getInstance() : Biblioteca
    + getListaUtenti() : ObservableList<Utente>
    + getListaLibri() : ObservableList<Libro>
    + getListaPrestiti() : ObservableList<Prestito>
    + {static} caricaDaFile(filename : String) : Biblioteca
    + salvaSuFile(filename : String) : void
}

class App {
    - {static} scene : Scene
    + start(stage : Stage) : void
    + {static} setRoot(fxml : String, controller : Object) : void
    - {static} loadFXML(fxml : String, controller : Object) : Parent
    + {static} main(args : String[]) : void
}

class DashboardGeneraleController {
    - initialize() : void
    - apriSezUtente() : void
    - apriSezLibro() : void
    - apriSezPrestiti() : void
}

class SezioneLibriController {
    - tabLibri : TableView
    - cTitolo : TableColumn
    - cAutori : TableColumn
    - cAnno : TableColumn
    - cIsbn : TableColumn
    - cCopieTotali : TableColumn
    - cCopieDisponibili : TableColumn
    - ricLibro : TextField
    - cancLibroBtn : Button
    - listaLibri : ObservableList<Libro> {readOnly}
    - initialize() : void
    - aggiungiLibro() : void
    - cancellaLibro() : void
    - tornaIndietro() : void
}

class SezioneUtentiController {
    - tabUtenti : TableView
    - cCognome : TableColumn
    - cNome : TableColumn
    - cMatricola : TableColumn
    - cEmail : TableColumn
    - cPrestitiAttivi : TableColumn
    - ricUtente : TextField
    - cancUtenteBtn : Button
    - listaUtenti : ObservableList<Utente> {readOnly}
    - initialize() : void
    - aggiungiUtente() : void
    - cancellaUtente() : void
    - tornaIndietro() : void
}

class SezionePresitiController {
    - tabPrestiti : TableView
    - cUtente : TableColumn
    - cLibro : TableColumn
    - cData : TableColumn
    - cancPrestitoBtn : Button
    - listaUtenti : ObservableList<Utente> {readOnly}
    - listaLibri : ObservableList<Libro> {readOnly}
    - listaPrestiti : ObservableList<Prestito> {readOnly}
    - initialize() : void
    - aggiungiPrestito() : void
    - cancellaPrestito() : void
    - tornaIndietro() : void
}

class AggiungiUtenteDialog {
    - nomeField : TextField
    - cognomeField : TextField
    - matricolaField : TextField
    - matricolaError : Label
    - emailField : TextField
    - emailError : Label
    + AggiungiUtenteDialog()
    - aggiornaOk(ok : Node) : void
}

class AggiungiLibroDialog {
    - titoloField : TextField
    - autoriField : TextField
    - annoField : TextField
    - annoError : Label
    - isbnField : TextField
    - isbnError : Label
    - copieField : TextField
    - copieError : Label
    + AggiungiLibroDialog()
    - aggiornaOk(ok : Node) : void
}

class AggiungiPrestitoDialog {
    - utenteBox : ComboBox<Utente>
    - utenteError : Label
    - libroBox : ComboBox<Libro>
    - libroError : Label
    - dataRestituzionePicker : DatePicker
    - dataRestituzioneError : Label
    - listaUtenti : ObservableList<Utente> {readOnly}
    - listaLibri : ObservableList<Libro> {readOnly}
    + AggiungiPrestitoDialog()
    - aggiornaOk(ok : Node) : void
}



' Start dell'Applicazione e Dashboard Generale
App "1" --> "1" DashboardGeneraleController : <<use>>

DashboardGeneraleController "1" --> "1" SezioneUtentiController : <<use>>
DashboardGeneraleController "1" --> "1" SezioneLibriController : <<use>>
DashboardGeneraleController "1" --> "1" SezionePresitiController : <<use>>


' Biblioteca
Biblioteca "1" o-- "0..*" Utente : <<has-a>>
Biblioteca "1" o-- "0..*" Libro : <<has-a>>
Biblioteca "1" o-- "0..*" Prestito : <<has-a>>

' Relazione Singleton: instance contiene l'unica istanza della classe Biblioteca
Biblioteca "1" --> "1" Biblioteca : instance


' Controller
SezioneUtentiController "1" --> "0..*" Utente : <<use>>
SezioneLibriController "1" --> "0..*" Libro : <<use>>

SezionePresitiController "1" --> "0..*" Prestito : <<use>>
SezionePresitiController "1" --> "0..*" Utente : <<use>>
SezionePresitiController "1" --> "0..*" Libro : <<use>>

' Relazione tra Controller e Finestre di Dialogo
SezioneUtentiController "1" --> "1" AggiungiUtenteDialog : <<create>>
SezioneLibriController "1" --> "1" AggiungiLibroDialog : <<create>>
SezionePresitiController "1" --> "1" AggiungiPrestitoDialog : <<create>>


' Finestre di Dialogo
AggiungiUtenteDialog "1" --> "1" Utente : <<create>>
AggiungiLibroDialog "1" --> "1" Libro : <<create>>

AggiungiPrestitoDialog "1" --> "1" Prestito : <<create>>
AggiungiPrestitoDialog "1" --> "0..*" Utente : <<use>>
AggiungiPrestitoDialog "1" --> "0..*" Libro : <<use>>


@enduml